<resources>
    <string name="app_name">Help Alert</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome</string>
    <string name="Addemergencycontact">Add Emergency Contact</string>
    <string name="phonenumber">Phone Number</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>