<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".AddContacts">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:adjustViewBounds="true"
        android:maxWidth="50dp"
        android:maxHeight="50dp"
        android:src="@drawable/helpalertimage"></ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/Addemergencycontact"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/name"
        android:textColorHint="#616161"
        tools:ignore="TextContrmetadjer@rocketmail.comastCheck" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:hint="@string/phonenumber"
        android:textColorHint="#616161"
        tools:ignore="TextContrastCheck" />


    <Button
        android:id="@+id/btn_addcontact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:text="@string/submit"
        app:iconTint="#3F51B5"
        app:rippleColor="#3F51B5" />

</LinearLayout>