<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/helpalertimage"></ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#3F51B5"
        android:textSize="30sp"
        android:textStyle="bold" />



    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="#616161"
        tools:ignore="TextContrastCheck" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#616161"
        tools:ignore="TextContrastCheck" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:text="@string/login"
        app:iconTint="#3F51B5"
        app:rippleColor="#3F51B5"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/registerNow"
        android:text="@string/click_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/forgotPassword"
        android:text="Forgot password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>